# biogeme

./: .#.gitignore  .flake8  .gitignore  .pylintrc  .python-version  .travis.yml  AUTHORS  COPYING  LICENSE  MANIFEST.in  Makefile.in  Pipfile  README.md  aclocal.m4  biogeme.toml  clean_all.py  config.h.in  configure  configure.ac  cysetuptools.py  pyproject.toml  requirements.txt  setup.cfg  setup.cfg.keep  setup.py  setup_windows.cfg  setup_windows_310.cfg  tox.ini
archive/: Makefile.am  README.md  compile  config.guess  install-sh  libraries.mk  ltmain.sh  texinfo.tex  ylwrap
archive/biogeme/: biogeme.cc
archive/biomerge/: Makefile.am
archive/biosim/: biosim.cc  patSimVersion.cc  patSimVersion.h
archive/gtkgui/: bioGtkFileViewer.h  bioGtkScriptDialog.cc  bioLogWindow.cc  bioLogWindow.h  bioUiFile.cc  bioUiFile.h  gtkguibiogeme.cc
archive/gtkgui/windowsInstallation/: gtkguibiogeme.nsi
archive/libraries/bisonbiogeme/: Makefile.am  patAdditiveUtility.cc  patAlternative.h  patArithAbs.cc  patArithAnd.h  patArithConstant.cc  patArithDeriv.h  patArithDivide.cc  patArithDivide.h  patArithExp.h  patArithGreaterEqual.cc  patArithGreaterEqual.h  patArithInt.h  patArithLog.cc  patArithLog.h  patArithMax.cc  patArithMax.h  patArithMin.cc  patArithMult.cc  patArithNode.h  patArithNormalRandom.cc  patArithNotEqual.cc  patArithPower.h  patArithSqrt.cc  patArithSqrt.h  patArithUnifRandom.cc  patArithVariable.cc  patArrayIterator.cc  patArrayIterator.h  patAttributeNamesIterator.cc  patAttributeNamesIterator.h  patBetaLikeIterator.h  patBetaLikeParameter.cc  patBiogeme.h  patBiogemeIterationBackup.cc  patBiogemeIterationBackup.h  patBiogemeScripting.h  patBisonSingletonFactory.cc  patCnlAlphaIterator.cc  patCnlAlphaParameter.h  (+54 more)
archive/libraries/cfsqp/: cfsqpusr.h  myqld.cc
archive/libraries/gaussHermite/: bioGaussHermite.cc  bioGhFunction.cc
archive/libraries/ipopt/: Makefile.am
archive/libraries/linearAlgebra/: patGeneralizedInverseIteration.cc  patGeneralizedInverseIteration.h  patInverse.h  patInverseIteration.h  patKalman.cc  patLu.h  patMatrix.cc  patMatrix.h  patMyMatrix.h  patNrSgn.h  patPythag.cc  patQR.cc  patSvd.h
archive/libraries/parameters/: Makefile.am  patScannerParam.cc  patScannerParam.ll
archive/libraries/pythonbiogeme/: bioArithAbs.cc  bioArithAbs.h  bioArithBayes.cc  bioArithBayesMH.cc  bioArithBinaryExpression.cc  bioArithBinaryExpression.h  bioArithBinaryMinus.cc  bioArithBinaryMinus.h  bioArithCompositeLiteral.cc  bioArithDivide.h  bioArithElem.h  bioArithElementaryExpression.h  bioArithEqual.h  bioArithExp.h  bioArithFixedParameter.h  bioArithGreater.h  bioArithGreaterEqual.cc  bioArithLess.cc  bioArithLessEqual.cc  bioArithMin.h  (+52 more)
archive/mod2py/: Makefile.am  mod2py.cc
archive/pythonbiogeme/: debugbiogeme.in  pythonbiogeme.in  pythonbiogeme_static.in
biogeme/: Makefile.am  Makefile.in  __init__.py  algorithms.py  assisted.py  biogeme.py  cnl.py  database.py  distributions.py  draws.py  exceptions.py  expressions.keep  expressions.py  filenames.py  hamabs.py  idmanager.py  loglikelihood.py  messaging.py  models.py  optimization.py  results.py  segmentation.py  singleton.py  tools.py  version.py  vns.py
biosim/: Makefile.am  Makefile.in
gtkgui/: Makefile.am  Makefile.in  bioFilePackage.cc  bioFilePackage.h  bioGtkFileViewer.cc  bioGtkGui.cc  bioGtkGui.h  bioGtkScriptDialog.h  debuggui.in  gtkbiogeme.ui  logo.h
gtkgui/windowsInstallation/: createInstaller.sh  gtkguibiogeme_old.nsi
libraries/cfsqp/: Makefile.am  Makefile.in  mycfsqp.cc  patCfsqp.cc  patCfsqp.h
libraries/gaussHermite/: Makefile.am  Makefile.in  bioGaussHermite.h  bioGhFunction.h
libraries/linearAlgebra/: Makefile.am  Makefile.in  patEigenVectors.cc  patEigenVectors.h  patHouseholder.cc  patHouseholder.h  patHybridMatrix.cc  patHybridMatrix.h  patInverse.cc  patInverseIteration.cc  patKalman.h  patLu.cc  patMyMatrix.cc  patPythag.h  patQR.h  patSvd.cc
libraries/pythonbiogeme/: Makefile.am  Makefile.in  bioArithAnd.cc  bioArithAnd.h  bioArithBayes.h  bioArithBayesMH.h  bioArithBayesMean.cc  bioArithBayesMean.h  bioArithBinaryPlus.cc  bioArithBinaryPlus.h  bioArithCompositeLiteral.h  bioArithConstant.cc  bioArithConstant.h  bioArithDerivative.cc  bioArithDerivative.h  bioArithDivide.cc  bioArithElem.cc  bioArithElementaryExpression.cc  bioArithEqual.cc  bioArithExp.cc  bioArithFixedParameter.cc  bioArithGHIntegral.cc  bioArithGHIntegral.h  bioArithGaussHermite.cc  bioArithGaussHermite.h  bioArithGreater.cc  bioArithGreaterEqual.h  bioArithIterator.cc  bioArithIterator.h  bioArithLess.h  bioArithLiteral.cc  bioArithLiteral.h  bioArithLog.cc  bioArithLog.h  bioArithMatrix.cc  bioArithMatrix.h  bioArithMax.cc  bioArithMax.h  bioArithMin.cc  bioArithMonteCarlo.cc  (+70 more)
libraries/randomNumbers/: Makefile.am  Makefile.in  patBinomial.cc  patBinomial.h  patCenteredUniform.cc  patCenteredUniform.h  patDiscreteDistribution.cc  patDrawsFromFile.h  patHalton.cc  patHessTrain.cc  patHessTrain.h  patMultivariateNormal.cc  patMultivariateNormal.h  patNormalWichura.cc  patRandomInteger.h  patUniform.cc  patUniform.h  patUnixUniform.cc  patZeroOneUniform.cc
libraries/solvopt/: Makefile.am  Makefile.in  solvoptParameters.h
libraries/trustRegion/: Makefile.am  Makefile.in  patNonLinearProblem.cc  patSimBasedOptimizationProblem.cc  patSimBasedOptimizationProblem.h  trBFGS.cc  trBounds.cc  trBoxGCP.cc  trFunction.cc  trHessian.h  trHybridMatrix.cc  trHybridMatrix.h  trNonLinearAlgo.cc  trParameters.cc  trPrecond.h  trPrecondCG.cc  trSR1.cc  trSchnabelEskow.cc  trSecantUpdate.cc  trSecantUpdate.h  trSimpleBoundsAlgo.cc  trSimpleBoundsAlgo.h  trTheoryGCP.h  trTointSteihaug.h  trVector.h
pybiogeme/: Makefile.am  Makefile.in  pybiogeme.cc
pythonbiogeme/: Makefile.am  Makefile.in  pythonbiogeme.in
pythonbiogeme/python/: bio_expression.py  bio_iterator.py  biogeme-python3-config.py  boxcox.py  distributions.py  legendre.py  loglikelihood.py  mev.py  statistics.py  weightedloglikelihood.py
tools/histograms/: Makefile.am  Makefile.in  generateHistogram.py  histogram.py  weightedhistogram.in
(+3328 files in other folders)
