[metadata]
name = biogeme
version = 3.2.9a
description = Estimation and application of discrete choice models
long_description = file: README.md
long_description_content_type = text/markdown
author = Michel Bierlaire
author_email = michel.bierlaire@epfl.ch
url = http://biogeme.epfl.ch
download_urls = https://pypi.org/project/biogeme/
project_urls =
	Documentation = http://biogeme.epfl.ch/documents.html
	Code = https://github.com/michelbierlaire/biogeme
classifiers =
	Intended Audience :: Education
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Mathematics
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: C++
	Programming Language :: Cython
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: Implementation :: CPython