[metadata]
name = biogeme
version = attr: biogeme.version.__version__
description = Estimation and application of discrete choice models
long_description = file: README.md
long_description_content_type = text/markdown
author = Michel Bierlaire
author_email = michel.bierlaire@epfl.ch
url = http://biogeme.epfl.ch
download_urls = https://pypi.org/project/biogeme/
project_urls =
	Documentation = http://biogeme.epfl.ch/documents.html
	Code = https://github.com/michelbierlaire/biogeme
classifiers =
	Intended Audience :: Education
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Mathematics
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: C++
	Programming Language :: Cython
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
install_requires = 

[options.extras_require]
dev = cython

[cython-defaults]
include_dirs = src/

[cython-module: biogeme.cythonbiogeme]
sources = src/cythonbiogeme.pyx
          src/biogeme.cc
          src/evaluateExpressions.cc
          src/bioMemoryManagement.cc
          src/bioNormalCdf.cc
          src/bioFormula.cc
          src/bioSeveralFormulas.cc
          src/bioThreadMemory.cc
          src/bioThreadMemoryOneExpression.cc
          src/bioThreadMemorySimul.cc
          src/bioString.cc
          src/bioExprNormalCdf.cc
          src/bioExprIntegrate.cc
          src/bioExprGaussHermite.cc
          src/bioExprRandomVariable.cc
          src/bioExprMontecarlo.cc
          src/bioExprPanelTrajectory.cc
          src/bioExprDraws.cc
          src/bioExprDerive.cc
          src/bioExprMin.cc
          src/bioExprMax.cc
          src/bioExprAnd.cc
          src/bioExprOr.cc
          src/bioExprEqual.cc
          src/bioExprNotEqual.cc
          src/bioExprLessOrEqual.cc
          src/bioExprLess.cc
          src/bioExprGreaterOrEqual.cc
          src/bioExprGreater.cc
          src/bioExprElem.cc
          src/bioExprMultSum.cc
          src/bioExprLiteral.cc
          src/bioExprFreeParameter.cc
          src/bioExprFixedParameter.cc
          src/bioExprVariable.cc
          src/bioExprPlus.cc
          src/bioExprMinus.cc
          src/bioExprTimes.cc
          src/bioExprDivide.cc
          src/bioExprPower.cc
          src/bioExprUnaryMinus.cc
          src/bioExprExp.cc
          src/bioExprLog.cc
          src/bioExprNumeric.cc
          src/bioExprLogLogit.cc
          src/bioExprLogLogitFullChoiceSet.cc
          src/bioExprLinearUtility.cc
          src/bioExpression.cc
          src/bioSeveralExpressions.cc
          src/bioExceptions.cc
          src/bioDerivatives.cc
          src/bioVectorOfDerivatives.cc
          src/bioGaussHermite.cc
          src/bioGhFunction.cc

include_dirs = eval(__import__('numpy').get_include())
language = c++
