ACLOCAL_AMFLAGS = -I m4
pkgdatdir = ${pkgdatadir}$(INSTALL_VERSION_SUFFIX)

SUBDIRS =  \
libraries/utils \
libraries/linearAlgebra \
libraries/trustRegion \
libraries/cfsqp \
libraries/ipopt \
libraries/solvopt \
libraries/randomNumbers \
libraries/gaussHermite \
libraries/parameters \
libraries/bisonbiogeme \
libraries/pythonbiogeme \
tools/histograms \
tools/prepareData \
biogeme \
pybiogeme \
pythonbiogeme \
biosim \
mod2py \
biomerge \
gtkgui
